# to-x-runner

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  compat-contracts.yml  mutation.yml  python-publish.yml  semantic-release.yml
badges/: benchmark.json  compat-contracts.json  coverage-branches.json  coverage-lines.json  mutation-survivability.json
docs/: badges.md  compat-migration.md  milestones.md  real_world_examples.md  release-checklist.md
examples/: README.md  __init__.py  _structures.py  cpu_bound.py  io_bound.py  mixed_pipelines.py
githooks/: pre-commit
scripts/: ensure_uv_lock_version.py  install_dependency_group.py  update_benchmark_badge.py  update_compat_parity.py  update_coverage_badges.py  update_mutation_badge.py  write_status_badge.py
src/: sitecustomize.py
src/unirun/: __init__.py  api.py  benchmarks.py  capabilities.py  config.py  run.py  runtime.py  scheduler.py  workloads.py
src/unirun/compat/: __init__.py  _core.py  asyncio.py  futures.py
src/unirun/compat/asyncio/: __init__.py
src/unirun/compat/concurrent/: __init__.py  futures.py
src/unirun/executors/: __init__.py  async_bridge.py  process.py  subinterpreter.py  threading.py
src/unirun_bench/: __init__.py  __main__.py  cli.py  engine.py
tests/: .gitignore  conftest.py  sitecustomize.py  sitecustomize_unirun_compat.py  test_async_bridge.py  test_async_bridge_double.py  test_benchmarks.py  test_capabilities.py  test_compat_asyncio.py  test_compat_futures.py  test_compat_parity.py  test_config.py  test_cpython_contracts.py  test_doctests.py  test_interpreter_executor.py  test_mutation_badge.py  test_process_executor.py  test_process_executor_double.py  test_run.py  test_scheduler.py  test_scheduler_double.py  test_scheduler_properties.py  test_thread_executor.py  test_thread_executor_double.py  test_workloads.py
tests/compat/: test_asyncio_bridge.py  test_cpython_contracts.py  test_process_pool_executor.py  test_thread_pool_executor.py
tests/data/: compat_parity.json
