[project]
name = "unirun"
dynamic = ["version"]
description = "Unified task offloading helpers for CPython 3.11+"
readme = "README.md"
authors = [
    { name = "Kim Milhan", email = "kimmilhan@gmail.com" },
]
keywords = ["concurrency", "parallelism", "thread", "coroutine", "awaitable", "multiprocess", "async", "Free-threaded"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
benchmark = []

[dependency-groups]
dev = [
    "coverage",
    "mutmut",
    "pytest",
    "ruff",
    "ty",
]

[project.scripts]
unirun-bench = "unirun_bench.cli:main"

[tool.ruff]
target-version = "py314"
preview = true
exclude = [
    ".mutants_backup",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "D",  # docstring coverage handled via doctests
]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.14"

[tool.mutmut]
paths_to_mutate = ["src/unirun"]
tests_dirs = ["tests"]
runner = "python -m pytest"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/unirun", "src/unirun_bench"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "tests"]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.uv.sources]
mutmut = { git = "https://github.com/KMilhan/mutmut.git", rev = "ensure-compatibility-with-python-3.14" }
